# rubiks-cube-second-feature

./: CMakeLists.txt  README.md  cube_save.txt  main.cpp
docs/: checkpoint1_reflection.md  checkpoint1_tests.md  checkpoint2_plan.md  checkpoint2_reflection.md  checkpoint2_tests.md  checkpoint3_plan.md  checkpoint3_reflection.md  checkpoint3_test.md  checkpoint4_plan.md  checkpoint4_reflection.md  checkpoint4_test.md
include/: Cube.h  CubeManager.h  CubeSaver.h  Cubeloader.h  Side.h
src/: Cube.cpp  CubeLoader.cpp  CubeManager.cpp  CubeSaver.cpp  Side.cpp
tests/: test_feature.cpp
